infra/openshift/10-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: enzoblousa-dev
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
