infra/openshift/15-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: enzoblousa-dev
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 8080
