infra/openshift/20-notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification
  namespace: enzoblousa-dev
spec:
  selector:
    app: notification
  ports:
    - port: 8080
      targetPort: 8080
